<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_CWU_settings" >
        <EditTextPreference
            android:title="@string/pref_tablet_id"
            android:defaultValue="01"
            android:summary="@string/pref_tablet_id_summ"
            android:key="prefTabletId"/>

        <EditTextPreference
            android:defaultValue="www.compli-staging.depoel.local"
            android:key="prefServerName"
            android:summary="@string/pref_server_name"
            android:title="@string/pref_server_name" />

        <EditTextPreference
            android:defaultValue="22"
            android:key="prefServerPort"
            android:summary="@string/pref_server_port"
            android:title="@string/pref_server_port" />

        <EditTextPreference
            android:defaultValue="pdrage"
            android:key="prefUsername"
            android:summary="@string/pref_user_name"
            android:title="@string/pref_user_name" />

        <EditTextPreference
            android:defaultValue="pDr46@.2012"
            android:key="prefPassword"
            android:summary="@string/pref_password"
            android:title="@string/pref_password"
            android:inputType="textPassword" />


    </PreferenceCategory>

</PreferenceScreen>